--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href https://amirben113.github.io/assiva/  && npx angular-cli-ghpages --dir=dist/assiva"
-  },
+    "deploy": "ng build --prod --base-href https://amirben113.github.io/assiva/  && npx angular-cli-ghpages --dir=dist/assiva",
+    "deploy1": "ng b --prod --base-href https://amirben113.github.io/assiva/ && npx ngh --dir=dist/assiva"},
   "engines": {
     "npm": "please-use-yarn",
     "yarn": ">= 1.17.3",
