--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "config": "npx ts-node-esm ./scripts/setEnv.ts",
     "start": "yarn run config && ng serve -o",
-    "build": "yarn run config && ng build --prod",
+    "build": "yarn run config && ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href https://amirben113.github.io/assiva/  && npx angular-cli-ghpages --dir=dist/assiva",
-    "deploy1": "ng b --prod --base-href https://amirben113.github.io/assiva/ && npx ngh --dir=dist/assiva"
+    "deploy": "ng build --configuration production --base-href https://amirben113.github.io/assiva/  && npx angular-cli-ghpages --dir=dist/assiva",
+    "deploy1": "ng b --configuration production --base-href https://amirben113.github.io/assiva/ && npx ngh --dir=dist/assiva"
   },
   "engines": {
     "npm": "please-use-yarn",
@@ -19,16 +19,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.11",
+    "@angular/animations": "12.2.17",
     "@angular/cdk": "10.2.6",
-    "@angular/common": "11.2.11",
-    "@angular/compiler": "11.2.11",
-    "@angular/core": "11.2.11",
-    "@angular/forms": "11.2.11",
+    "@angular/common": "12.2.17",
+    "@angular/compiler": "12.2.17",
+    "@angular/core": "12.2.17",
+    "@angular/forms": "12.2.17",
     "@angular/material": "10.2.6",
-    "@angular/platform-browser": "11.2.11",
-    "@angular/platform-browser-dynamic": "11.2.11",
-    "@angular/router": "11.2.11",
+    "@angular/platform-browser": "12.2.17",
+    "@angular/platform-browser-dynamic": "12.2.17",
+    "@angular/router": "12.2.17",
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/angular-fontawesome": "0.8.0",
     "@fortawesome/fontawesome-svg-core": "1.2.28",
@@ -44,13 +44,13 @@
     "ngx-pagination": "5.0.0",
     "rxjs": "6.5.4",
     "tslib": "2.0.0",
-    "zone.js": "0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.10",
-    "@angular/cli": "11.2.10",
-    "@angular/compiler-cli": "11.2.11",
-    "@angular/language-service": "11.2.11",
+    "@angular-devkit/build-angular": "12.2.18",
+    "@angular/cli": "12.2.18",
+    "@angular/compiler-cli": "12.2.17",
+    "@angular/language-service": "12.2.17",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "12.11.1",
@@ -71,7 +71,7 @@
     "ts-node": "10.9.1",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "4.1.6"
+    "typescript": "4.3.5"
   },
   "husky": {
     "hooks": {
