--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "emailjs-com": "2.6.4",
     "firebase": "^9.23.0",
     "jquery": "3.5.1",
+    "ng-recaptcha": "^11.0.0",
     "ngx-owl-carousel-o": "5.0.0",
     "ngx-pagination": "5.0.0",
     "rxjs": "6.5.4",
